jenkins-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-webserver
  labels:
    app: webserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
        - image: public.ecr.aws/q1c0q0c4/develeap:42
          name: webserver
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 512Mi
