jenkins-demo/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-webserver-service
spec:
  ports:
    - nodePort: 31589
      port: 8080
      protocol: TCP
      targetPort: 5000
  selector:
    app: webserver
  type: NodePort
