jenkins-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: webserver-ingress
spec:
  rules:
  - host: www.myminikube.com
    http:
      paths:
      - path: /webserver
        pathType: Prefix
        backend:
          service:
            name: my-webserver-service
            port:
              number: 8080
